--- a/css/style.css
+++ b/css/style.css
@@ -13,17 +13,79 @@ html, body {
 
 /*============= NAVIGATION =============*/
 
+.navbar-brand img {
+  width: 6.0rem;
+  height: auto;
+}
 
+.navbar {
+  background: linear-gradient(to right, #f2f2f2, #666666);
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .3);
+}
 
+.nav-item {
+  padding: .4rem;
+}
+
+.nav-link {
+  color: black!important;
+}
+
+.nav-link.active,
+.nav-link.hover {
+  color: #7026c9!important;
+}
 /*============= CAROUSEL =============*/
 
-
+.carousel-inner {
+  max-height: 40rem!important;
+}
 
 /*---Change Carousel Transition Speed --*/
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  transition: transform 1.2s ease;
+}
 
+.carousel-indicators li {
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  margin-right: 4px;
+  margin-left: 4px;
+}
 
 /*-- Carousel Content --*/
+.carousel-caption {
+  position: absolute;
+  top: 47%;
+  transform: translateY(-50%);
+}
 
+.bg-dark {
+  background-color: rgba(0, 0, 0, .6)!important;
+  border-radius: 1.5rem;
+  padding: 1rem;
+}
+
+.bg-white {
+  background-color: rgba(255, 255, 255, .55)!important;
+  border-radius: 1.5rem;
+  padding: 1rem;
+}
+
+.carousel-caption h3 {
+  font-size: 2.3rem;
+  font-weight: 300;
+}
+
+p.lead {
+  font-size:1.2rem;
+}
 
 /*============= SOCIAL MEDIA STICKY BAR =============*/
 
@@ -34,8 +96,6 @@ html, body {
   border-radius: 0;
   box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .1);
 }
-
-
 /*============= COLUMN CONTENT =============*/
 
 
